--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <div id="remaining"></div>
     </div>
 
+    <div>
+        <h2>Noch gesuchte Sticker</h2>
+        <div id="stillSearching"></div>
+    </div>
+
     <script>
         function calculateMatches() {
             const meSearch = parseInput(document.getElementById('meSearch').value);
@@ -53,12 +58,10 @@
             const commonDuplicates = partnerSearch.filter(value => myDuplicates.includes(value));
 
             // Ergebnis für gesuchte Sticker
-            const resultSearch = `Gesuchte Sticker, die dein Tauschpartner doppelt hat (${new Set(commonSearch).size} Sticker):<br>${Array.from(new Set(commonSearch)).join(', ')}<br><br>`;
+            const resultSearch = groupAndDisplay("Gesuchte Sticker, die dein Tauschpartner doppelt hat", commonSearch);
 
             // Ergebnis für gesuchte Sticker deines Tauschpartners
-            const resultDuplicates = `Gesuchte Sticker deines Tauschpartners, die du doppelt hast (${new Set(commonDuplicates).size} Sticker):<br>${Array.from(new Set(commonDuplicates)).join(', ')}`;
-
-            document.getElementById('result').innerHTML = resultSearch + resultDuplicates;
+            const resultDuplicates = groupAndDisplay("Gesuchte Sticker deines Tauschpartners, die du doppelt hast", commonDuplicates);
 
             // Berechne die übrig gebliebenen Sticker
             const remainingStickers = myDuplicates.slice();
@@ -71,15 +74,53 @@
                 }
             }
 
-            const remainingResult = `Übrig gebliebene Sticker nach dem Tausch (${remainingStickers.length} Sticker):<br>${remainingStickers.join(', ')}`;
+            const remainingResult = groupAndDisplay("Übrig gebliebene Sticker nach dem Tausch", remainingStickers);
 
+            // Berechne noch gesuchte Sticker
+            const stillSearchingStickers = meSearch.filter(value => !commonSearch.includes(value));
+
+            const stillSearchingResult = groupAndDisplay("Noch gesuchte Sticker", stillSearchingStickers);
+
+            document.getElementById('result').innerHTML = resultSearch + '<br><br>' + resultDuplicates;
             document.getElementById('remaining').innerHTML = remainingResult;
+            document.getElementById('stillSearching').innerHTML = stillSearchingResult;
         }
 
         function parseInput(input) {
             // Teile den Eingabetext basierend auf Komma, Komma mit Leerzeichen oder Leerzeichen.
             return input.split(/,|, | /).map(item => item.trim()).filter(item => item !== "");
         }
+
+		function groupAndDisplay(description, numbers) {
+		    const groupedNumbers = {};
+		
+		    for (const number of numbers) {
+		        const block = Math.floor(number / 100);
+		        if (!groupedNumbers[block]) {
+		            groupedNumbers[block] = [];
+		        }
+		        groupedNumbers[block].push(number);
+		    }
+		
+		    const result = [];
+		    let totalStickerCount = 0;
+		
+		    for (const key in groupedNumbers) {
+		        const stickerList = groupedNumbers[key].join(', ');
+		        result.push(stickerList);
+		        totalStickerCount += groupedNumbers[key].length;
+		    }
+		
+		    const descriptionString = `${description} (${totalStickerCount} Sticker):`;
+		    result.unshift(descriptionString);
+		
+		    if (totalStickerCount > 0) {
+		        return result.join('<br>');
+		    } else {
+		        return `${description} (0 Sticker):`;
+		    }
+		}
+
 
         // Das Ergebnis wird berechnet, wenn eine der Eingaben geändert wird.
         document.getElementById('meSearch').addEventListener('input', calculateMatches);
