fixed url for gereted link

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ function generateLink() {
     const myDuplicatesValue = encodeURIComponent(document.getElementById('myDuplicates').value || '');
     const partnerDuplicatesValue = encodeURIComponent(document.getElementById('partnerDuplicates').value || '');
 
-    const generatedLink = `https://test.github.io/StickerTausch/?meSearch=${meSearchValue}&partnerSearch=${partnerSearchValue}&myDuplicates=${myDuplicatesValue}&partnerDuplicates=${partnerDuplicatesValue}`;
+    const generatedLink = `https://eklass.github.io/StickerTausch/?meSearch=${meSearchValue}&partnerSearch=${partnerSearchValue}&myDuplicates=${myDuplicatesValue}&partnerDuplicates=${partnerDuplicatesValue}`;
 
     document.getElementById('generatedLink').value = generatedLink;
 }
